@@ -7,6 +7,7 @@
 - removed unused `CONF.logger`
 - improved API routing in the form `ROUTE('API /api/ +action_name')`;
 - added in-memory cache support for the `schema.action()` and `NEWACTION()`
+- improved `F.cache.removeAll()` by adding support for string array
 
 ========================
 0.0.80
